[gd_scene load_steps=4 format=3 uid="uid://b0ohgmrm5bjel"]

[ext_resource type="Script" path="res://Scripts/Characters/PlayerController.gd" id="1_38ix0"]
[ext_resource type="Texture2D" uid="uid://cvrdokj3pb52b" path="res://Art/white_cursor.png" id="2_jg2h1"]
[ext_resource type="AudioStream" uid="uid://crvcccgxwsvo7" path="res://Sounds/HitSound.wav" id="2_ll5jx"]

[node name="Player" type="Node2D"]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_38ix0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.4, 0)
texture = ExtResource("2_jg2h1")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(1.095, 0)
polygon = PackedVector2Array(-9, -19, -9, 14, -1, 7, 6, 21, 11, 19, 3, 4, 15, 3)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ll5jx")

[node name="InvincibilityTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
